# manatee

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
.github/workflows/: ci.yml  publish-book.yml
book/: book.toml
book/src/: SUMMARY.md  ch00-00-title-page.md  ch00-01-forward.md  ch00-02-introduction.md  ch01-00-getting-started.md  ch01-01-system.setup.md
crates/aquarium/: Cargo.toml  README.md
crates/aquarium/src/: app.rs  lib.rs  platform.rs  window.rs
crates/aquarium/src/platform/: mac.rs  windows.rs
crates/manatee/: Cargo.toml
crates/manatee-old/: Cargo.toml
crates/manatee-old/src/: components.rs  game.rs  graphics.rs  (+2 more)
crates/manatee/src/: component.rs  components.rs  core.rs  ecs.rs  entity.rs  game.rs  game_object.rs  gpu.rs  graphics.rs  lib.rs  scene.rs  scene_manager.rs  system.rs  systems.rs  window-ex.rs  window.rs  window_state.rs
crates/manatee/src/component/: component_manager.rs  components.rs
crates/manatee/src/component/components/: camera_component.rs  position_component.rs
crates/manatee/src/components/: camera.rs  camera_component.rs  position.rs  position_component.rs  transform.rs  wgpu_tutorial.rs
crates/manatee/src/core/: game.rs  scene.rs
crates/manatee/src/ecs/: component.rs  component_manager.rs  entity.rs  entity_manager.rs  system.rs  system_manager.rs
crates/manatee/src/entity/: entity_manager.rs
crates/manatee/src/game/: asset.rs  context.rs  game_mode.rs  gpu.rs  window_state.rs
crates/manatee/src/graphics/: example_shader.wgsl  gpu.rs  render_target.rs  texture.rs
crates/manatee/src/scene/: scene_manager.rs
crates/manatee/src/system/: system_manager.rs  systems.rs
crates/manatee/src/system/systems/: camera_system.rs  input_system.rs
crates/manatee/src/systems/: camera_system.rs  wgpu_tutorial_system.rs
crates/manatee/src/window/: winit_event_loop.rs
docs/: 2. Setup.md  3. Basic Tutorial.md  Misc Docs To Categorize.md
shaders/: README.md
src/: editor.zig  engine.zig  main.rs
src/editor/: main.zig
src/engine/: game.zig  main.zig  platform.zig
(+10 files in other folders)
