[package]
name = "manatee"
description = "A ridiculously simple Rust-based game engine"
version = "0.0.1"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
cgmath = "0.18.0"
downcast-rs = "1.2.1"
hashbrown = "0.14.5"
pollster = "0.3.0"
wgpu = "0.20.0"
winit = "0.30.0"

[dependencies.image]
version = "0.25.1"
default-features = false
# TODO: I'll almost definitely want to support more formats lol
features = ["png"]
